Updates from Overleaf

--- a/abntex2-modelo-references.bib
+++ b/abntex2-modelo-references.bib
@@ -341,3 +341,44 @@
 	Publisher = {Perigee Books},
 	Title = {Art as Experience},
 	Year = {1980}}
+
+%% TCC
+@book{nehmzow2012mobile,
+  title={Mobile robotics: a practical introduction},
+  author={Nehmzow, Ulrich},
+  year={2012},
+  publisher={Springer Science \& Business Media}
+}
+
+@article{russo2020survey,
+  title={A survey on mechanical solutions for hybrid mobile robots},
+  author={Russo, Matteo and Ceccarelli, Marco},
+  journal={Robotics},
+  volume={9},
+  number={2},
+  pages={32},
+  year={2020},
+  publisher={Multidisciplinary Digital Publishing Institute}
+}
+
+@article{gruber2016,
+author = {Gruber, Christoph and Hofbaur, Michael},
+year = {2016},
+month = {04},
+pages = {93-105},
+title = {Remarks on the classification of wheeled mobile robots},
+volume = {7},
+journal = {Mechanical Sciences},
+doi = {10.5194/ms-7-93-2016}
+}
+
+@article{campion1996structural,
+  title={Structural properties and classification of kinematic and dynamic models of wheeled mobile robots},
+  author={Campion, Guy and Bastin, Georges and Dandrea-Novel, Brigitte},
+  journal={IEEE transactions on robotics and automation},
+  volume={12},
+  number={1},
+  pages={47--62},
+  year={1996},
+  publisher={IEEE}
+}
