--- a/capitulos/capitulo2.tex
+++ b/capitulos/capitulo2.tex
@@ -1,7 +1,19 @@
 \chapter{Revisão da literatura}
 
-Deve contemplar de maneira clara e objetiva os elementos conceituais e a fundamentação teórica e científica que sejam importantes para respaldar a pesquisa enfocada no trabalho, bem como servir de apoio para os procedimentos metodológicos inerentes ao tema proposto e para a interpretação dos resultados.  Pode ser apresentada na forma de subdivisões abaixo. 
-
-\section{Tema 1}
-
-\section{Tema 2}
+\section{Robótica Móvel}
+A robótica móvel é uma das grandes áreas da robótica. Robôs são, por definição, manipuladores ou mecanismos reprogramáveis e multifuncionais utilizados para mover materiais, ferramentas ou partes através de diferentes trajetórias definidas e para realização de diversas tarefas. A principal diferença entre os robôs manipuladores, amplamente aplicados em industrias, e robôs móveis é que o primeiro tipo realiza movimentos dentro de um espaço de trabalho definido e o segundo consegue se locomover no espaço, seja utilizando rodas, pés ou outro meio de locomoção. \cite{nehmzow2012mobile}
+\par
+Na literatura, é possível encontrar diversas classificações para os robôs móveis. Uma delas é a divisão por meio de locomoção do robô, que pode ser terrestre, aquática, aérea ou hibrida. Uma das características presentes em todas as classificações de locomoção é a ideia da biomimética, ou seja, a movimentação dos robôs é sempre inspirada na fisiologia e nos métodos de locomoção encontradas nos animais. \cite{russo2020survey} Dentro da classificação por meio de locomoção é possível realizar uma subdivisão pela forma com que esse movimento será realizada. Por exemplo, robôs terrestres podem se locomover através de pernas, rodas, peristaltismo, deslizamento, braquiação e adesão a superfícies. \cite{russo2020survey}
+\par
+Dentro do subgrupo de robôs móveis terrestres que utilizam rodas, também é possível realizar um agrupamento de acordo com a disposição, tração exercida e grau de mobilidade que a roda possui. As rodas podem ser do tipo mecano, uma roda omnidirecional, caster, fixas ou dirigida. O número e o tipo dessas rodas define o grau de liberdade que o robô possui. \cite{gruber2016} 
+\subsection{Robô Diferencial}
+Robôs diferenciais descrevem um dos possíveis arranjos existentes dentre os robôs móveis sob rodas. São robôs planares, compostos de duas rodas fixas e independentemente controláveis, normalmente dispostas de forma paralela em uma das extremidades e também uma roda do tipo caster central, que permite a locomoção em qualquer direção.
+\subsubsection{Cinemática}
+\section{Controle PID}
+\section{Visão Computacional}
+\subsection{Aquisição de Imagens}
+\subsection{Processamento de Imagens}
+\section{Laboratórios Remotos Didáticos}
+\subsection{Tipos}
+\subsection{Didática}
+\subsection{Estrutura e Arquitetura}
