--- a/capitulos/capitulo3.tex
+++ b/capitulos/capitulo3.tex
@@ -1,13 +1,21 @@
-\chapter{Desenvolvimento}
+\chapter{Materiais e Métodos}
 
-Deve conter a descrição da área de estudo e dos materiais (banco de dados, coleta de dados, imagens, etc) e dos procedimentos metodológicos (experimentos, entrevistas, métodos estatísticos, etc) que serão empregados na realização do trabalho, de maneira que outros pesquisadores possam reproduzir o estudo. Pode ser apresentada na forma de subdivisões abaixo
-
-\section{Caracterização da área de estudo}
-
-\section{Dados}
-
-\section{Metodologia}
-
-\section{Método ou procedimento de análise A}
-
-\section{Método ou procedimento de análise B}
+\section{Algorítimos de Visão Computacional}
+\section{LEGO Ev3}
+\section{ROS}
+\section{Biblioteca openCV}
+\section{Comunicação}
+\subsection{Protocolo HTTP}
+\subsection{Servidor Apache}
+\subsection{Servidor Flask}
+\section{Linguagens de Progamação}
+\subsection{Orientação a Objetos}
+\subsection{Microserviços}
+\subsection{Backend}
+\subsubsection{Python}
+\subsubsection{PHP}
+\subsection{Frontend}
+\subsubsection{Typescript}
+\subsubsection{Framework Angular}
+\subsection{Banco de Dados Relacionais}
+\subsubsection{Mysql}
