--- a/capitulos/capitulo4.tex
+++ b/capitulos/capitulo4.tex
@@ -1,1 +1,37 @@
-\chapter{Resultados}
+\chapter{Desenvolvimento}
+
+Deve conter a descrição da área de estudo e dos materiais (banco de dados, coleta de dados, imagens, etc) e dos procedimentos metodológicos (experimentos, entrevistas, métodos estatísticos, etc) que serão empregados na realização do trabalho, de maneira que outros pesquisadores possam reproduzir o estudo. Pode ser apresentada na forma de subdivisões abaixo
+
+\section{Montagem e Programação do Robô Diferencial}
+\subsection{Montagem Física}
+\subsection{Implantação do Sistema Operacional}
+\subsection{Configuração e Comunicação do ROS}
+
+\section{Plataforma de Visão Computacional}
+\subsection{Aquisição da Imagem da Câmera}
+\subsection{Processamento da Imagem Através de Filtros}
+\subsection{Reconhecimento de Obstáculos}
+\subsection{Reconhecimento da Posição e Orientação do Robô}
+
+\section{Controle do Robô}
+\subsection{Integração com a Visão Computacional}
+\subsection{Algoritmos de Busca}
+\subsection{Script de Controle}
+\subsection{Aquisição de Dados}
+
+\section{Interface WEB}
+\subsection{Backend}
+\subsection{Frontend}
+
+\section{Desenvolvimento da Área de Experimentos}
+\subsection{Comunicação entre o robô e o sistema web}
+\subsection{Interface do Experimento}
+\subsection{Persistência dos dados}
+
+\section{Funcionalidades do Laboratório}
+\subsection{Controle de Acesso}
+\subsection{Sessão}
+\subsection{Experimento}
+\subsection{Agendamento}
+\subsection{Histórico}
+\subsection{Resultados}
