--- a/modelo_monografia_DECAT.tex
+++ b/modelo_monografia_DECAT.tex
@@ -75,11 +75,11 @@
 % ---
 % Informações de dados para CAPA e FOLHA DE ROSTO
 % ---
-\titulo{INSERIR TÍTULO DO TRABALHO}
-\autor{NOME DO AUTOR}
+\titulo{Desenvolvimento de um Laboratório Remoto para Ensino de Robótica Móvel}
+\autor{Paulo Felipe Possa Parreira}
 \local{Ouro Preto}
-\data{2019}
-\orientador{Prof. Nome do Primeiro Orientador, Ph.D.}
+\data{2021}
+\orientador{Prof. José Alberto Naves Cocota Junior, Ph.D.}
 \coorientador{Prof. Nome do Segundo Orientador, Dr.Sc.}
 \instituicao{Universidade Federal de Ouro Preto}
 \unidade{Escola de Minas}
@@ -223,7 +223,7 @@
 %
 \begin{folhadeaprovacao}
 % 
-   Monografia intitulada INSERIR TÍTULO DO TRABALHO defendida e aprovada em $XX$ de $XX$ de \imprimirdata, pela comiss{\~a}o avaliadora constitu{\'i}da pelos professores:
+   Monografia intitulada Desenvolvimento de um Laboratório Remoto para Ensino de Robótica Móvel defendida e aprovada em $XX$ de $XX$ de \imprimirdata, pela comiss{\~a}o avaliadora constitu{\'i}da pelos professores:
    \vspace*{\fill}
    \assinatura{\textbf{\imprimirorientador} \\ Orientador} 
    \vspace*{\fill}
@@ -360,6 +360,7 @@
 \include{capitulos/capitulo3}
 \include{capitulos/capitulo4}
 \include{capitulos/capitulo5}
+\include{capitulos/capitulo6}
 
 % ELEMENTOS PÓS-TEXTUAIS
 % ---------------------------------
