Updates from Overleaf

--- a/abntex2-modelo-references.bib
+++ b/abntex2-modelo-references.bib
@@ -382,3 +382,42 @@ doi = {10.5194/ms-7-93-2016}
   year={1996},
   publisher={IEEE}
 }
+
+@article{aicardi1995closed,
+  title={Closed loop steering of unicycle like vehicles via Lyapunov techniques},
+  author={Aicardi, Michele and Casalino, Giuseppe and Bicchi, Antonio and Balestrino, Aldo},
+  journal={IEEE Robotics \& Automation Magazine},
+  volume={2},
+  number={1},
+  pages={27--35},
+  year={1995},
+  publisher={IEEE}
+}
+@article{sousa2003controle,
+  title={Controle de rob{\^o}s m{\'o}veis utilizando o modelo cinem{\'a}tico},
+  author={Sousa J{\'u}nior, Celso de and Hemerly, Elder Moreira},
+  journal={Sba: Controle \& Automa{\c{c}}{\~a}o Sociedade Brasileira de Automatica},
+  volume={14},
+  number={4},
+  pages={384--392},
+  year={2003},
+  publisher={SciELO Brasil}
+}
+
+@book{dudek2010computational,
+  title={Computational principles of mobile robotics},
+  author={Dudek, Gregory and Jenkin, Michael},
+  year={2010},
+  publisher={Cambridge university press}
+}
+
+@book{astrom1995, title={PID Controllers - Theory, Design, and Tuning (2nd Edition)}, publisher={ISA}, author={Åström Karl Johan. and Hägglund Tore}, year={1995}}
+
+@book{ogata2011engenharia,
+  title={Engenharia de controle moderno},
+  author={Ogata, K.},
+  isbn={9788576058106},
+  url={https://books.google.com.br/books?id=iL3FYgEACAAJ},
+  year={2011},
+  publisher={PRENTICE HALL BRASIL}
+}
