--- a/modelo_monografia_DECAT.tex
+++ b/modelo_monografia_DECAT.tex
@@ -32,6 +32,9 @@
 \usepackage{graphicx}			% Inclusão de gráficos
 \usepackage{microtype} 			% para melhorias de justificação
 \usepackage{supertabular}       % tabela na capa do documento
+\usepackage{mathtools}
+\usepackage{amsmath}
+
 % ---
 		
 % ---
